keycloak-19.0.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8443
  selector:
    app: keycloak
  type: ClusterIP
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak01  
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 9080
    targetPort: 8080      
  selector:
    app: keycloak
  type: LoadBalancer  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:19.0.1
        args: ["start-dev --import-realm"]
        volumeMounts:
        - mountPath: "/opt/keycloak/data/import/keycloak-realm.json"
          name: "opt-keycloak-data-import"
          readOnly: true
          subPathExpr: "keycloak-realm.json"
        ports:
          - name: jgroups
            containerPort: 7600
          - name: http
            containerPort: 8080
          - name: https
            containerPort: 8443
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
      volumes:      
      - name: opt-keycloak-data-import
        configMap:
          name: keycloak-realm-configmap
