keycloak-ingress-labkit-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-labkit-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "http"
spec:
  rules:
  - host: h1.localtest.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: keycloak01
            port:
              number: 9080
