keycloak-ingress-labkit.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-labkit-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "https"
spec:
  tls:
    - hosts:
      - auth.localtest.me
      secretName: auth-labkit-tls-secret
  rules:
  - host: auth.localtest.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: keycloak
            port:
              number: 443
